# SubdivisionSurfaces

./: .gitignore  CMakeLists.txt  RES  readme.md  run.sh
src/: CMakeLists.txt
src/Visualization/: GLCamera.h  GLView.cpp  GLViewer.h
src/base/: model.cpp  model.h
src/software/: main.cpp  test.cpp
src/subdivision/: catmull_solver.cpp  catmull_solver.h  doo_solver.cpp  doo_solver.h  loop_solver.cpp  loop_solver.h  mesh.cpp  mesh.h  subdivision_solver.cpp  subdivision_solver.h
src/utils/: common_utils.h  config.h  geometry_utils.cpp  geometry_utils.h  hash_table.h  io_utils.cpp  io_utils.h
src/visualization/: GLCamera.h  GLView.cpp  GLViewer.h  gl_camera.h  gl_geometry.cpp  gl_geometry.h  gl_shader.cpp  gl_shader.h  gl_utils.h  gl_viewer.cpp  gl_viewer.h  model_______f.glsl.bak  model_f.glsl  model_v.glsl
